--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 <body>
   <nav class="nav horizontal-align">
     <div class="nav-item"><a href="#about-project">About Project</a></div>
-    <div class="nav-item"><a href="#home">Instagram</a></div>
-    <div class="nav-item"><a href="#home">Facebook</a></div>
+    <div class="nav-item"><a href="https://www.instagram.com/immersivemedialab/">Instagram</a></div>
+    <div class="nav-item"><a href="https://www.facebook.com/immersivemedialab/">Facebook</a></div>
   </nav>
   <section class="hero container center text-center">
     <div>
